Fix spacing below search nav tabs

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -5,9 +5,10 @@
 .search-header {
   margin-bottom: 2em;
 
-  + .nav-tabs {
-    margin-bottom: 2em;
-  }
+}
+
+.search-type-nav {
+  margin-bottom: 2em;
 }
 
 .search-results em {
